[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/draw.gd" type="Script" id=1]
[ext_resource path="res://scenes/rooms/ttt_draw.gd" type="Script" id=2]

[node name="draw" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="draw_viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2

[node name="pen" type="Control" parent="draw_viewport"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )

[node name="draw_texture" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
[connection signal="draw" from="draw_viewport/pen" to="draw_viewport/pen" method="_on_draw"]
[connection signal="drew_line" from="draw_viewport/pen" to="." method="_on_pen_drew_line"]
